<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Dicoding Event App</string>
    <string name="title_home">Home</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_finished">Finished</string>
    <string name="summary">Summary</string>
    <string name="event_name">Event Name</string>
    <string name="description_image">Description Image</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="dicoding_event">Dicoding Event</string>
    <string name="finished_events">Finished Events</string>
    <string name="register">Register</string>
    <string name="title_favorite">Favorite</string>
    <string name="search_event">Search Event</string>
    <string name="close">Close</string>
    <string name="nosearch">Tidak ada hasil ditemukan.</string>
    <string name="no_fav_event">Tidak ada favorite event</string>
    <string name="title_setting">Setting</string>
    <string name="favorite_events">Favorite Events</string>
    <string name="fab_favorite_event">fab favorite event</string>
    <string name="setting">Setting</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="enable_dark_mode">Enable dark mode</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="enable_notification">Enable notification</string>
    <string name="quota_remaining" tools:ignore="PluralsCandidate">%d kuota tersisa</string>
</resources>