<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.setting.SettingFragment">

    <TextView
        android:id="@+id/tvSettingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/setting"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDarkModeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/dark_mode"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tvSettingTitle"
        app:layout_constraintTop_toBottomOf="@id/tvSettingTitle" />

    <TextView
        android:id="@+id/tvDarkModeDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_dark_mode"
        android:textSize="14sp"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintStart_toStartOf="@id/tvDarkModeLabel"
        app:layout_constraintTop_toBottomOf="@id/tvDarkModeLabel"
        android:layout_marginTop="4dp" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchDarkMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvDarkModeLabel"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/tvReminderLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/daily_reminder"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tvDarkModeDescription"
        app:layout_constraintTop_toBottomOf="@id/tvDarkModeDescription" />

    <TextView
        android:id="@+id/tvReminderDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_notification"
        android:textSize="14sp"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintStart_toStartOf="@id/tvReminderLabel"
        app:layout_constraintTop_toBottomOf="@id/tvReminderLabel"
        android:layout_marginTop="4dp" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvReminderLabel"
        android:layout_marginEnd="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>